--- a/lib/web/templates/albums.html
+++ b/lib/web/templates/albums.html
@@ -1,12 +1,39 @@
 {% extends "layout.html" %}
+{% block title %}Albums{% endblock %}
 {% block body %}
-    <h2>Albums</h2>
-    {% for album in albums: %}
-    <a href="{{ url_for('collection.musics', artists=mf.artists, albums=album) }}">{{ album }}</a> -
-    <a href="{{ url_for('collection.stats', artists=mf.artists, albums=album) }}">stats</a> -
-    <a href="{{ url_for('collection.m3u', artists=mf.artists, albums=album, name=album) }}">m3u</a> -
-    <a href="{{ url_for('collection.zip', artists=mf.artists, albums=album, name=album) }}">zip</a> -
-    <a href="{{ url_for('collection.player', artists=mf.artists, albums=album) }}">play</a>
-    <br>
-    {% endfor %}
+    <table class="table table-striped table-condensed">
+      <thead class="thead-inverse">
+        <tr>
+          <th>Album</th>
+          <th>Artist</th>
+          <th>Musics</th>
+          <th>Play</th>
+          <th>YouTube</th>
+          <th>Download</th>
+          <th>Info</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for a in albums: %}
+        <tr>
+          <td>{{ a.name }}</td>
+          <td>{{ a.artist }}</td>
+          <td><a href="{{ url_for('collection.musics', artists=mf.artists, albums=a.name) }}">musics</a></td>
+          <td>
+            <a href="{{ url_for('collection.player', artists=mf.artists, albums=a.name) }}">play</a>
+          </td>
+          <td>
+            <a href="{{ a.youtube }}">{{ a.youtube }}</a>
+          </td>
+          <td>
+            <a href="{{ url_for('collection.m3u', artists=mf.artists, albums=a.name, name=a.name) }}">m3u</a> /
+            <a href="{{ url_for('collection.zip', artists=mf.artists, albums=a.name, name=a.name) }}">zip</a>
+          </td>
+          <td>
+            <a href="{{ url_for('collection.stats', artists=mf.artists, albums=a.name) }}">stats</a>
+          </td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
 {% endblock %}
