--- a/lib/web/templates/artists.html
+++ b/lib/web/templates/artists.html
@@ -1,5 +1,4 @@
 {% extends "layout.html" %}
-
 {% block title %}Artists{% endblock %}
 {% block body %}
     <table class="table table-striped table-condensed">
@@ -13,27 +12,25 @@
         </tr>
       </thead>
       <tbody>
-        {% for artist in artists: %}
+        {% for a in artists: %}
         <tr>
-          <td>{{ artist }}</td>
+          <td>{{ a.name }}</td>
           <td>
-            <a href="{{ url_for('collection.musics', keywords=mf.keywords, artists=artist) }}">musics</a> /
-            <a href="{{ url_for('collection.albums', keywords=mf.keywords, artists=artist) }}">albums</a>
+            <a href="{{ url_for('collection.musics', keywords=mf.keywords, artists=a.name) }}">musics</a> /
+            <a href="{{ url_for('collection.albums', keywords=mf.keywords, artists=a.name) }}">albums</a>
           </td>
           <td>
-            <a href="{{ url_for('collection.player', keywords=mf.keywords, artists=artist) }}">all</a> /
-            <a href="{{ url_for('collection.player', min_rating=4.0, artists=artist) }}">4+</a> /
-            <a href="{{ url_for('collection.player', min_rating=4.5, artists=artist) }}">4.5+</a> /
-            <a href="{{ url_for('collection.player', min_rating=5.0, artists=artist) }}">5.0</a> /
-            <a href="{{ url_for('collection.player', keywords="best", artists=artist) }}">best</a>
+            <a href="{{ url_for('collection.player', keywords=mf.keywords, artists=a.name) }}">all</a> /
+            <a href="{{ url_for('collection.player', min_rating=4.0, artists=a.name) }}">4+</a> /
+            <a href="{{ url_for('collection.player', min_rating=4.5, artists=a.name) }}">4.5+</a> /
+            <a href="{{ url_for('collection.player', min_rating=5.0, artists=a.name) }}">5.0</a> /
+            <a href="{{ url_for('collection.player', keywords="best", artists=a.name) }}">best</a>
           </td>
           <td>
-            <a href="{{ url_for('collection.m3u', keywords=mf.keywords, artists=artist, name=artist) }}">m3u</a> /
-            <a href="{{ url_for('collection.zip', keywords=mf.keywords, artists=artist, name=artist) }}">zip</a>
+            <a href="{{ url_for('collection.m3u', keywords=mf.keywords, artists=a.name, name=a.name) }}">m3u</a> /
+            <a href="{{ url_for('collection.zip', keywords=mf.keywords, artists=a.name, name=a.name) }}">zip</a>
           </td>
-          <td>
-            <a href="{{ url_for('collection.stats', keywords=mf.keywords, artists=artist) }}">stats</a>
-          </td>
+          <td><a href="{{ url_for('collection.stats', keywords=mf.keywords, artists=a.name) }}">stats</a></td>
         </tr>
         {% endfor %}
       </tbody>
