--- a/lib/web/templates/static/musicbot.css
+++ b/lib/web/templates/static/musicbot.css
@@ -1,3 +1,12 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  margin-bottom: 30px;
+}
+
 .table-condensed>thead>tr>th, .table-condensed>tbody>tr>th, .table-condensed>tfoot>tr>th, .table-condensed>thead>tr>td, .table-condensed>tbody>tr>td, .table-condensed>tfoot>tr>td{
   padding: 0.1rem;
   font-size: 0.75rem;
@@ -16,6 +25,14 @@ ul#playlist li.active a {
   text-decoration:none;
 }
 
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 30px;
+  line-height: 30px;
+  background-color: #f5f5f5;
+}
 /*
 #myProgress {
     width: 100%;
