--- a/lib/web/templates/layout.html
+++ b/lib/web/templates/layout.html
@@ -10,6 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="/static/musicbot.css">
+    <script src="/static/musicbot.js"></script>
     <link rel="icon" href="/static/favicon.ico">
   </head>
   <body>
@@ -83,6 +84,13 @@
             </div>
           </li>
         </ul>
+        <form class="form-inline">
+          <div class="form-check mb-2 mr-sm-2 mb-sm-0">
+            <label class="form-check-label">
+              <input id="shuffle" class="form-check-input" type="checkbox"> Shuffle
+            </label>
+          </div>
+        </form>
       </div>
     </nav>
     <div class="container-fluid">
