--- a/lib/web/templates/musics.html
+++ b/lib/web/templates/musics.html
@@ -32,7 +32,7 @@
           <td>{{ m.folder }}</td>
           <td>{{ secondsToHuman(m.duration) }}</td>
           <td>{{ bytesToHuman(m.size) }}</td>
-          <td><a href="{{ m.youtube }}">{{ m.youtube }}</a></td>
+          <td>{%if m.youtube != "not found" %}<a href="{{ m.youtube }}">{{ m.youtube }}</a>{%else%}Not found{% endif %}</td>
           <td>
             <a href="{{ url_for('collection.player', artists=m.artist, albums=m.album, titles=m.title) }}">play</a> /
             <a href="{{ url_for('collection.download', artists=m.artist, albums=m.album, titles=m.title, name=download_title(m)) }}">download</a>
