--- a/lib/web/templates/index.html
+++ b/lib/web/templates/index.html
@@ -2,4 +2,5 @@
 
 {% block body %}
 <h1 class="text-center">Welcome!</h1>
+<a href="https://github.com/AdrienPensart/musicbot">GitHub</a>
 {% endblock %}
