--- a/lib/web/templates/layout.html
+++ b/lib/web/templates/layout.html
@@ -15,7 +15,7 @@
     <link rel="icon" href="/static/favicon.ico">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <nav class="fixed-top navbar navbar-expand-lg navbar-light bg-primary">
       <!--
       <a href="https://github.com/AdrienPensart/musicbot">
         <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png">
@@ -97,7 +97,7 @@
         </form>
       </div>
     </nav>
-    <div class="container-fluid">
+    <div class="container-music container-fluid">
       <div class="p-1">
         {% with messages = get_flashed_messages() %}
           {% if messages|count %}
@@ -111,10 +111,12 @@
         {% block body %}{% endblock %}
       </div>
     </div>
-    <footer class="footer">
+    <!--
+    <footer class="footer fixed-bottom">
       <div class="container-fluid text-center bg-primary">
         Rendered in {{ request_time() }}
       </div>
     </footer>
+    -->
   </body>
 </html>
