--- a/lib/web/templates/static/musicbot.css
+++ b/lib/web/templates/static/musicbot.css
@@ -7,6 +7,13 @@ body {
   margin-bottom: 30px;
 }
 
+.container-music {
+  margin-top: 60px;
+  /*
+  margin-bottom: 60px;
+  */
+}
+
 .table-condensed>thead>tr>th, .table-condensed>tbody>tr>th, .table-condensed>tfoot>tr>th, .table-condensed>thead>tr>td, .table-condensed>tbody>tr>td, .table-condensed>tfoot>tr>td{
   padding: 0.1rem;
   font-size: 0.75rem;
@@ -14,6 +21,8 @@ body {
 
 #player {
   width: 100%;
+  display: block;
+  height: 32px;
 }
 
 ul#playlist li {
