python-3.7 not ready, http2

--- a/lib/web/templates/layout.html
+++ b/lib/web/templates/layout.html
@@ -84,6 +84,7 @@
               <a class="dropdown-item" href="/swagger">Swagger</a>
             </div>
           </li>
+          <li>Rendered in {{ request_time() }}</li>
         </ul>
         <form class="form-inline">
           <div class="form-check mb-2 mr-sm-2 mb-sm-0">
@@ -114,7 +115,6 @@
     <!--
     <footer class="footer fixed-bottom">
       <div class="container-fluid text-center bg-primary">
-        Rendered in {{ request_time() }}
       </div>
     </footer>
     -->
