--- a/lib/web/templates/layout.html
+++ b/lib/web/templates/layout.html
@@ -16,11 +16,6 @@
   </head>
   <body>
     <nav class="fixed-top navbar navbar-expand-lg navbar-light bg-primary">
-      <!--
-      <a href="https://github.com/AdrienPensart/musicbot">
-        <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png">
-      </a>
-      -->
       <a class="navbar-brand" href="/">MusicBot</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -84,16 +79,25 @@
               <a class="dropdown-item" href="/swagger">Swagger</a>
             </div>
           </li>
-          <li>Rendered in {{ request_time() }}</li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Help
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="https://github.com/AdrienPensart/musicbot">GitHub</a>
+              <div class="dropdown-divider"></div>
+              <a class="nav-link disabled" href="#">Rendered in {{ request_time() }}</a>
+            </div>
+          </li>
         </ul>
         <form class="form-inline">
           <div class="form-check mb-2 mr-sm-2 mb-sm-0">
-            <label class="form-check-label">
-              Limit:<input id="limit" class="form-check-input" type="number" min="0">
-            </label>
-            <label class="form-check-label">
-              Shuffle:<input id="shuffle" class="form-check-input" type="checkbox">
-            </label>
+            <input id="limit" class="form-control form-check-input" type="number" min="0" step="1" placeholder="Playlist length">
+            <input id="volume" class="form-control form-check-input" type="number" min="0" max="100" step="1" placeholder="Volume">
+            <input id="shuffle" class="form-control form-check-input" type="checkbox">
+            <label class="form-check-label">Shuffle&nbsp;</label>
+            <input id="autoplay" class="form-control form-check-input" type="checkbox">
+            <label class="form-check-label">Autoplay</label>
           </div>
         </form>
       </div>
@@ -112,11 +116,5 @@
         {% block body %}{% endblock %}
       </div>
     </div>
-    <!--
-    <footer class="footer fixed-bottom">
-      <div class="container-fluid text-center bg-primary">
-      </div>
-    </footer>
-    -->
   </body>
 </html>
