--- a/lib/web/templates/m3u.html
+++ b/lib/web/templates/m3u.html
@@ -1,4 +1,4 @@
 #EXTM3U
 {% for m in musics: %}#EXTINF:{{ m.duration }},{{ m.artist }} - {{ m.title }}
-{{ url_for('collection.download', _scheme='https', _external=True, _server=server(), artist=m.artist, album=m.album, title=m.title) | safe }}
+{{ url_for('collection.download', _scheme='https', _external=True, _server=server(), artists=m.artist, albums=m.album, titles=m.title) | safe }}
 {% endfor %}
