full logging best practices

--- a/lib/web/templates/layout.html
+++ b/lib/web/templates/layout.html
@@ -75,6 +75,7 @@
               <a class="dropdown-item" href="{{ url_for('collection.stats') }}">Stats</a>
               <a class="dropdown-item" href="{{ url_for('collection.consistency') }}">Consistency</a>
               <a class="dropdown-item" href="{{ url_for('collection.refresh') }}">Refresh DB</a>
+              <a class="dropdown-item" href="{{ url_for('collection.youtube') }}">Crawl YouTube</a>
             </div>
           </li>
 
