--- a/lib/web/templates/musics.html
+++ b/lib/web/templates/musics.html
@@ -34,7 +34,7 @@
           <td>{{ bytesToHuman(m.size) }}</td>
           <td>{%if m.youtube != "not found" %}<a href="{{ m.youtube }}">{{ m.youtube }}</a>{%else%}Not found{% endif %}</td>
           <td>
-            <a href="{{ url_for('collection.player', artists=m.artist, albums=m.album, titles=m.title) }}">play</a> /
+            <a href="{{ url_for('collection.player', artists=m.artist, albums=m.album, titles=m.title, autoplay=1) }}">play</a> /
             <a href="{{ url_for('collection.download', artists=m.artist, albums=m.album, titles=m.title, name=download_title(m)) }}">download</a> /
             <a href="{{ url_for('collection.music', id=m.id) }}">show</a>
           </td>
