--- a/lib/web/templates/layout.html
+++ b/lib/web/templates/layout.html
@@ -76,6 +76,7 @@
               <a class="dropdown-item" href="{{ url_for('collection.consistency') }}">Consistency</a>
               <a class="dropdown-item" href="{{ url_for('collection.refresh') }}">Refresh DB</a>
               <a class="dropdown-item" href="{{ url_for('collection.youtube') }}">Crawl YouTube</a>
+              <a class="dropdown-item" href="{{ url_for('collection.schedule') }}">Schedule all jobs</a>
             </div>
           </li>
 
